<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="convert_title">Currency convert</string>
    <string name="convert_add">Add currency</string>
    <string name="convert_update">Update exchanges</string>
    <string name="convert_new_currency">New currency code</string>
    <string name="convert_value_hint">Currency value: 123.45</string>
    <string name="convert_code_hint" tools:ignore="TypographyEllipsis">USD, RUB ...</string>
    <string name="convert_exchanges_date">Exchange rates are current as of %s</string>
    <string name="convert_parsing_error">Error while parsing exchanges</string>
    <string name="convert_code_empty">Currency code is empty</string>
    <string name="convert_code_length_error">Currency code must consist 3 characters</string>
    <string name="convert_code_letters_error">Currency code contains invalid characters</string>
    <string name="convert_exchanges_not_updated">Exchange rates are not updated</string>
    <string name="convert_exchanges_not_deleted">Exchange rates are not deleted</string>
    <string name="convert_code_insert_error">Error adding new currency code</string>
    <string name="convert_new_code_exist">Currency code has already been added</string>
</resources>